# project-3

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Makefile  PROJECT_3_INVFORGE_MASTER_CONTEXT.md  README.md  dvc.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cosign-model-signing.yml  deploy.yml  security.yml  sla-monitoring.yml
api/: .env.example  __init__.py  config.py  ingestion.py  logging.py  main.py  validation.py
api/inventree/: __init__.py  client.py
app/: .env.example  Caddyfile  README.md  docker-compose.yml
dashboard/: __init__.py  app.py  auth.py  config.py  loaders.py  paths.py  smoke.py  types.py
docs/: REVIEWER_DEMO_GUIDE.md  architecture-final.md  case-study.md  dashboard.md  decision-intelligence.md  demo-script.md  deployment-contract.md  deployment-security.md  limitations.md  mlops.md  observability.md  portfolio-links.md  portfolio-pack.md  retraining-pipeline.md  screenshots.md  sla-monitoring.md
feast/: feature_store.yaml  inventory_features.py
ml/: __init__.py  config.yaml  data.py  decision.py  decision_intelligence.py  features.py  metrics.py  split.py  train.py
mlops/: __init__.py  comparison.py  config.py  config.yaml  drift.py  loop.py  packaging.py  registry.py  service.py  splitting.py
observability/: __init__.py  artifacts.py  docker-compose.observability.yml  health.py  logging.py  metrics.py  smoke.py
scripts/: capture_pr13_screenshots.py  capture_pr13_screenshots.sh  cloud_run_smoke.sh  collect_pr12_6_evidence.sh  deploy_smoke.py  export_dashboard_fixtures.py  validate_deploy_profiles.py
security/: README.md  __init__.py  anomaly.py  audit.py  checks.py  constants.py  pipeline.py  risk_scorer.py  smoke_check.py
(+172 files in other folders)
