[project]
name = "invforge"
version = "0.1.0"
description = "InvForge — AI Operations Control Tower for Inventory & Operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pandera>=0.20.0",
    "structlog>=24.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
]
pipeline = [
    "dvc>=3.0.0",
    "feast>=0.40.0",
]
ml = [
    "lightgbm>=4.0.0",
    "statsforecast>=2.0.0",
    "mlflow>=3.0.0",
    "shap>=0.45.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.15.3",
]
mlops = [
    "evidently>=0.7.0,<0.8.0",
    "bentoml>=1.4.0,<2.0.0",
]
dashboard = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]
observability = [
    "prometheus-client>=0.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.12"
strict = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["api/tests", "ml/tests"]

[tool.uv]
package = false
